samples/_failures_safe/1761637498_ecaaca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8badfc95.c: In function ‘main’:
./samples/SAFE/__tmp_8badfc95.c:159:28: error: missing terminating " character
  159 |                     printf("\
      |                            ^~
./samples/SAFE/__tmp_8badfc95.c:159:21: error: expected expression at end of input
  159 |                     printf("\
      |                     ^~~~~~
./samples/SAFE/__tmp_8badfc95.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8badfc95.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8badfc95.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8badfc95.c:159:21: error: expected declaration or statement at end of input
